--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 Clases/Tutorial 1/.ipynb_checkpoints/Tutorial 1 - Parte I-checkpoint.ipynb
 Clases/Tutorial 1/.ipynb_checkpoints/Tutorial 1 - Parte II-checkpoint.ipynb
 TPs/.ipynb_checkpoints/Consignas_TP1-checkpoint.ipynb
+Clases/Tutorial 2/.ipynb_checkpoints/Tutorial2_MLE_APIs_old-checkpoint.ipynb
+Clases/Tutorial 2/.ipynb_checkpoints/Tutorial2_BD_APIs-checkpoint.ipynb
+Clases/Tutorial 2/.ipynb_checkpoints/Tutorial2_BD_WebScraping-checkpoint.ipynb
